// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResourceQuota/ResourceQuotaDetailsView Default 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <h1
                class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
              >
                ResourceQuota
              </h1>
              <div
                class="MuiBox-root MuiBox-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            aria-busy="false"
            aria-live="polite"
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <dl
                class="MuiGrid-root makeStyles-table MuiGrid-container"
              >
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Name
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    test-cpu-quota
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Namespace
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <a
                    class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                    href="/"
                  >
                    test
                  </a>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Creation
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    2022-10-25T11:48:48.000Z
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Annotations
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
                      style="max-width: 80%;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth"
                      >
                        <p
                          class="MuiTypography-root makeStyles-metadataValueLabel MuiTypography-body1"
                          title="kubectl.kubernetes.io/last-applied-configuration: {\\"apiVersion\\":\\"v1\\",\\"kind\\":\\"ResourceQuota\\",\\"metadata\\":{\\"annotations\\":{},\\"name\\":\\"test-cpu-quota\\",\\"namespace\\":\\"test\\"},\\"spec\\":{\\"hard\\":{\\"limits.cpu\\":\\"300m\\",\\"requests.cpu\\":\\"200m\\"}}}
"
                        >
                          kubectl.kubernetes.io/last-applied-configuration: …
                        </p>
                      </div>
                    </div>
                  </div>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Status
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <div
                    class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
                  >
                    <table
                      class="MuiTable-root makeStyles-table makeStyles-table"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                            scope="col"
                          >
                            Resource
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                            scope="col"
                          >
                            Used
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                            scope="col"
                          >
                            Hard
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                          >
                            limits.cpu
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                          >
                            0 cores
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                          >
                            300m (0.3 cores)
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                          >
                            requests.cpu
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                          >
                            500m (0.5 cores)
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                          >
                            200m (0.2 cores)
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </dd>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Events
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
            >
              <table
                class="MuiTable-root makeStyles-table makeStyles-table"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Type
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Reason
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      From
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Message
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Age
                      <button
                        aria-label="sort swap"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      Normal
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      Created
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      kubelet
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      <div
                        class="MuiBox-root MuiBox-root"
                      >
                        <label
                          class="makeStyles-fullText"
                          id=""
                        >
                          Created
                        </label>
                      </div>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      <p
                        class="MuiTypography-root makeStyles-noWrap makeStyles-display MuiTypography-body1"
                        title="2021-03-01T00:00:00.000Z"
                      >
                        3mo
                        <span />
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ResourceQuota/ResourceQuotaDetailsView Error 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          />
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded"
        >
          <div
            class="MuiBox-root MuiBox-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
            >
              Phony error is phony!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ResourceQuota/ResourceQuotaDetailsView No Item Yet 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          />
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
            >
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
              <div
                class="MuiGrid-root MuiGrid-item"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root makeStyles-loaderContainer"
        >
          <div
            class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
            role="progressbar"
            style="width: 40px; height: 40px;"
            title="Loading resource data"
          >
            <svg
              class="MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
